2003-01-09  Christian Stimming  <stimming@tuhh.de>

	* po/el.po: Updated translation, reviewed by
	ta_panta_rei@flashmail.com.

2003-01-08  Derek Atkins  <derek@ihtfp.com>

	* apply patch to use Euclid's algo for gnc_numeric_reduce
	  more fixes for #95474

	* src/business/business-core/gncInvoice.c: actually apply
	  a payment to the proper transfer account.  Fixes bug #102893
	
2003-01-08  Christian Stimming  <stimming@tuhh.de>

	* po/ru.po: Updated very complete (!) Russian translation by
	Vitaly Lipatov <lav@altlinux.ru>.

2002-01-07 Herbert Thoma <herbie@hthoma.de>

	* src/gnome-search/gncmod-gnome-search.c:
	* src/business/business-gnome/businessmod-gnome.c:
	* gnucash/src/gnome-utils/dialog-options.h:
	* src/import-export/binary-import/druid-commodity.h:
	* src/register/register-gnome/gnucash-color.c:
	* src/report/report-gnome/gncmod-report-gnome.c:
	  add #ifdef HAVE_CONFIG_H
	    #include <config.h>
	    #endif
	  this fixes compile errors on SuSE 8.0 + 8.1

2003-01-07  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/file/* -- don't save half-built data.
	  Make sure that we're only saving the items that have been fully
	  created (not half-created).  Fixes the cause of bug #102776.

	* src/business/business-core/business-core.scm: return #f if
	  we cannot obtain an owner from a split (in the case of a regularly-
	  entered split)
	* src/business/business-reports/aging.scm:
	* src/business/business-reports/owner-report.scm:
	  Cope with not being able to obtain an owner from a split.
	  In particular, ignore it.  Fixes part of #97097.

2003-01-06  Derek Atkins  <derek@ihtfp.com>

	* macros/Makefile.am: include the rest of the macros in the dist.

	* src/engine/test/test-scm-query-import.scm: add a warning message
	  about potential "error" output which can be ignored.

	* intl-scm/Makefile.am: applied John's patch to build guile-strings.c
	  properly.
	
2003-01-05  Chris Lyttle  <chris@wilddev.net>

	* configure.in: release 1.7.7